Fix styling and layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@
   align-items: start;
   justify-content: start;
   width: 100%;
+  height: 100%;
 }
